--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@nuxtjs/sanity": "^1.8.1",
     "@pinia/nuxt": "^0.4.11",
     "@sanity/image-url": "^1.0.2",
+    "@vueuse/core": "^10.3.0",
+    "@vueuse/integrations": "^10.3.0",
     "nuxt-snackbar": "^1.0.3",
-    "pinia": "^2.1.6"
+    "pinia": "^2.1.6",
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
     "@invictus.codes/nuxt-vuetify": "^0.3.0",
