drop @nuxtjs/sanity and use native sanity client

--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@nuxtjs/emotion": "^1.0.2",
-    "@nuxtjs/sanity": "^1.8.1",
     "@pinia/nuxt": "^0.4.11",
+    "@sanity/client": "^6.4.0",
     "@sanity/image-url": "^1.0.2",
     "@vueuse/core": "^10.3.0",
     "@vueuse/integrations": "^10.3.0",
+    "bcryptjs": "^2.4.3",
+    "groqd": "^0.15.7",
     "nuxt-snackbar": "^1.0.3",
     "pinia": "^2.1.6",
     "universal-cookie": "^4.0.4"
@@ -22,6 +24,7 @@
   "devDependencies": {
     "@invictus.codes/nuxt-vuetify": "^0.3.0",
     "@nuxt/devtools": "latest",
+    "@types/bcryptjs": "^2.4.2",
     "@types/node": "^18.17.1",
     "nuxt": "^3.6.5",
     "sass": "^1.64.2"
