load paypal script and buttons

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nuxtjs/emotion": "^1.0.2",
+    "@paypal/paypal-js": "^6.0.1",
     "@pinia/nuxt": "^0.4.11",
     "@sanity/client": "^6.4.0",
     "@sanity/image-url": "^1.0.2",
